--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+
 .App {
+  display: flex;
+  align-items: center;
   text-align: center;
+  justify-content: center;
+  background:url(https://img.freepik.com/vecteurs-libre/fond-aquarelle_220290-15.jpg?w=2000);
+  height: 100%;
+
 }
 
 .App-logo {
